--- a/css_file.css
+++ b/css_file.css
@@ -19,3 +19,29 @@ li:before {
     content: counters(item, ".")" ";
     counter-increment: item
 }
+
+.sidenav {
+  height: 100%;
+  width: 160px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  padding-top: 20px;
+  padding-bottom: 50px;
+}
+.sidenav a {
+  padding: 6px 8px 20px 16px;
+  text-decoration: none;
+  font-size: 14px;
+  color: #FFFFFF;
+  display: block;
+}
+
+.main {
+  margin-left: 160px;
+  font-size: 16px;
+  padding: 0px 10px;
+}
