--- a/Documentation/css_file.css
+++ b/Documentation/css_file.css
@@ -22,7 +22,15 @@
     margin-left: 200px;
 }
 /*----------------------*/
-
+#overview_img{
+    border: 1px solid black;
+    width: 700px;
+}
+.ui_image{
+    border: 1px solid black;
+    padding: 0px 0px 0px 0px;
+    width: 400px;
+}
 table{
     border-collapse: collapse;
     border: 1px solid black;
