fixed merge mistake, added figure numbers

--- a/Documentation/css_file.css
+++ b/Documentation/css_file.css
@@ -26,6 +26,10 @@
     border: 1px solid black;
     width: 700px;
 }
+#use_case_diagram{
+    border: 1px solid black;
+    width: 700px;
+}
 .ui_image{
     border: 1px solid black;
     padding: 0px 0px 0px 0px;
