--- a/Documentation/SDS/css_file.css
+++ b/Documentation/SDS/css_file.css
@@ -10,7 +10,11 @@ h1, h4{
     display: inline;
 }
 li {
-    display: block
+    display: list-item;
+    margin: 10px 0px 0px 10px;
+}
+ul{
+    list-style-type: disc;
 }
 img{
     margin: 10px 5px 10px 5px;
