fixed li styling

--- a/Documentation/SDS/css_file.css
+++ b/Documentation/SDS/css_file.css
@@ -9,6 +9,9 @@ td, th{
 h1, h4{
     display: inline;
 }
+.unnumbered{
+    list-style-type: none;
+}
 li {
     display: list-item;
     margin: 10px 0px 0px 10px;
