static files added in index app

--- a/READ/index/templates/index/home.html
+++ b/READ/index/templates/index/home.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+      <!--  Loads the path to static files-->
+    {% load static %}
+    <link rel="stylesheet" type="text/css"  href="{% static 'index/home.css' %}">
+
     <meta charset="UTF-8">
     <title>HOME </title>
 </head>
 <body>
- <h1> TEST</h1>
+ <h1 class="red"> TEST</h1>
+
 </body>
 </html>
