--- a/READ/index/templates/index/home.html
+++ b/READ/index/templates/index/home.html
@@ -13,20 +13,11 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+
 </head>
 <body>
 
     <div class="site-wrap" id="home-section">
-
-      <div class="site-mobile-menu site-navbar-target">
-        <div class="site-mobile-menu-header">
-          <div class="site-mobile-menu-close mt-3">
-            <span class="icon-close2 js-menu-toggle"></span>
-          </div>
-        </div>
-        <div class="site-mobile-menu-body"></div>
-      </div>
-
 
        <header class="site-navbar site-navbar-target" role="banner">
 
@@ -60,7 +51,35 @@
         </div>
 
       </header>
+
+        <div class="ftco-blocks-cover-1">
+      <div class="site-section-cover half-bg">
+        <div class="container">
+          <div class="row align-items-center justify-content-center">
+            <div class="col-lg-8">
+              <h1 class="mb-5 text-primary font-weight-bold"  data-aos="fade-up">Manage all your  <span class="typed-words">Classes</span>.</h1>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+
+
+    </div>
+
+    <script src="js/typed.js"></script>
+            <script>
+            var typed = new Typed('.typed-words', {
+            strings: ["Business"," Startups"," Organization", " Company"],
+            typeSpeed: 80,
+            backSpeed: 80,
+            backDelay: 4000,
+            startDelay: 1000,
+            loop: true,
+            showCursor: true
+            });
+            </script>
+
 
 </body>
 </html>
