footer added to home.html

--- a/READ/index/templates/index/home.html
+++ b/READ/index/templates/index/home.html
@@ -4,6 +4,9 @@
       <!--  Loads the path to static files-->
     {% load static %}
     <link rel="stylesheet" type="text/css"  href="{% static 'index/home.css' %}">
+     <link rel="stylesheet" type="text/css"  href="{% static 'index/fonts/style.css' %}">
+     <link rel="stylesheet" type="text/css"  href="{% static 'index/bootstrap.min.css' %}">
+      <link rel="stylesheet" type="text/css"  href="{% static 'index/typed.js' %}">
 
     <meta charset="UTF-8">
     <title>HOME </title>
@@ -11,8 +14,8 @@
      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="fonts/icomoon/style.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+
+
 
 </head>
 <body>
@@ -64,10 +67,66 @@
       </div>
     </div>
 
+             <div class="footer site-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <div class="site-logo-footer">
+              <a href="index.html">ArcWork</a>
+            </div>
+          </div>
+          <div class="col-md-8 ml-auto">
+            <div class="row">
+              <div class="col-md-4 ml-auto">
+                <ul class="list-unstyled links">
+                  <li><a href="#">Contact Us</a></li>
+                  <li><a href="#">hello@mydomain.com</a></li>
+                  <li><a href="#">+1 829 2293 382</a></li>
+                  <li><a href="#">Support</a></li>
+                </ul>
+              </div>
+              <div class="col-md-4">
+                <ul class="list-unstyled links">
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">Blog</a></li>
+                  <li><a href="#">Services</a></li>
+                  <li><a href="#">About Us</a></li>
+                </ul>
+              </div>
+              <div class="col-md-4">
+                <ul class="list-unstyled links">
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">Blog</a></li>
+                  <li><a href="#">Services</a></li>
+                  <li><a href="#">About Us</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="site-section">
+      <div class="container">
+        <div class="row mb-4 text-center">
+          <div class="col">
+            <a href="#"><span class="m-2 icon-facebook"></span></a>
+            <a href="#"><span class="m-2 icon-twitter"></span></a>
+            <a href="#"><span class="m-2 icon-linkedin"></span></a>
+            <a href="#"><span class="m-2 icon-instagram"></span></a>
+            <a href="#"><span class="m-2 icon-skype"></span></a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+
 
     </div>
 
-    <script src="js/typed.js"></script>
+
             <script>
             var typed = new Typed('.typed-words', {
             strings: ["Business"," Startups"," Organization", " Company"],
