--- a/READ/index/templates/index/home.html
+++ b/READ/index/templates/index/home.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css"  href="{% static 'index/home.css' %}">
      <link rel="stylesheet" type="text/css"  href="{% static 'index/fonts/style.css' %}">
      <link rel="stylesheet" type="text/css"  href="{% static 'index/bootstrap.min.css' %}">
-      <link rel="stylesheet" type="text/css"  href="{% static 'index/typed.js' %}">
+     <script src="{% static 'index/typed.js' %}"></script>
 
     <meta charset="UTF-8">
     <title>HOME </title>
@@ -14,6 +14,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
 
@@ -29,7 +30,7 @@
 
             <div class="col-3 ">
               <div class="site-logo">
-                <a href="./home.html" class="font-weight-bold">READ</a>
+                <a href="{% url 'index' %}" class="font-weight-bold">READ</a>
               </div>
             </div>
 
@@ -72,7 +73,7 @@
         <div class="row">
           <div class="col-md-3">
             <div class="site-logo-footer">
-              <a href="index.html">ArcWork</a>
+              <a href="index.html">READ</a>
             </div>
           </div>
           <div class="col-md-8 ml-auto">
@@ -81,26 +82,17 @@
                 <ul class="list-unstyled links">
                   <li><a href="#">Contact Us</a></li>
                   <li><a href="#">hello@mydomain.com</a></li>
-                  <li><a href="#">+1 829 2293 382</a></li>
-                  <li><a href="#">Support</a></li>
+
                 </ul>
               </div>
               <div class="col-md-4">
                 <ul class="list-unstyled links">
                   <li><a href="#">Home</a></li>
-                  <li><a href="#">Blog</a></li>
-                  <li><a href="#">Services</a></li>
-                  <li><a href="#">About Us</a></li>
+                  <li><a href="#">Sign In</a></li>
+                  <li><a href="#">Sign Up</a></li>
                 </ul>
               </div>
-              <div class="col-md-4">
-                <ul class="list-unstyled links">
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">Blog</a></li>
-                  <li><a href="#">Services</a></li>
-                  <li><a href="#">About Us</a></li>
-                </ul>
-              </div>
+
             </div>
           </div>
         </div>
@@ -111,11 +103,11 @@
       <div class="container">
         <div class="row mb-4 text-center">
           <div class="col">
-            <a href="#"><span class="m-2 icon-facebook"></span></a>
-            <a href="#"><span class="m-2 icon-twitter"></span></a>
-            <a href="#"><span class="m-2 icon-linkedin"></span></a>
-            <a href="#"><span class="m-2 icon-instagram"></span></a>
-            <a href="#"><span class="m-2 icon-skype"></span></a>
+            <a href="#"><span class="m-2 fa fa-facebook fa-3x"></span></a>
+            <a href="#"><span class="m-2 fa fa-twitter fa-3x"></span></a>
+            <a href="#"><span class="m-2 fa fa-linkedin fa-3x"></span></a>
+
+
           </div>
         </div>
 
@@ -129,10 +121,10 @@
 
             <script>
             var typed = new Typed('.typed-words', {
-            strings: ["Business"," Startups"," Organization", " Company"],
-            typeSpeed: 80,
-            backSpeed: 80,
-            backDelay: 4000,
+            strings: [" Documents "," Classes "," Deadlines "],
+            typeSpeed: 100,
+            backSpeed: 100,
+            backDelay: 3000,
             startDelay: 1000,
             loop: true,
             showCursor: true
