--- a/web_app/mysite/read/templates/read/teacher/teacher_classes.html
+++ b/web_app/mysite/read/templates/read/teacher/teacher_classes.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+{% extends "./teacher_base.html" %}
+{% block content %}
     <h1>Your Classes</h1>
     {% if classes %}
     <ul>
@@ -15,6 +10,4 @@
     {% else %}
         <p>You have no classes</p>
     {% endif %}
-</body>
-</html>
-
+{% endblock %}
