--- a/web_app/mysite/read/templates/read/login.html
+++ b/web_app/mysite/read/templates/read/login.html
@@ -5,16 +5,13 @@
     <title></title>
 </head>
 <body>
-    {% load bootstrap4 %}
-    {% bootstrap_css %}
-    {% bootstrap_javascript jquery='full' %}
     {% if error_message %}
     <p>{{ error_message }}</p>
     {% endif %}
 
     <form action="{% url 'login_view' %}" method="post">
         {% csrf_token %}
-        {% bootstrap_form form %}
+        {{ form }}
         <input type="submit" value="Submit">
     </form>
     <br>
