--- a/web_app/mysite/read/templates/read/login.html
+++ b/web_app/mysite/read/templates/read/login.html
@@ -5,13 +5,18 @@
     <title></title>
 </head>
 <body>
+    <h1>Login</h1>
     {% if error_message %}
-    <p>{{ error_message }}</p>
+    <span style="color:red"><p>{{ error_message }}</p></span>
     {% endif %}
 
     <form action="{% url 'login_view' %}" method="post">
         {% csrf_token %}
-        {{ form }}
+        {% for field in form.visible_fields %}
+        <span style="color:red">{{ field.errors }}</span>
+            {{ field.label_tag }} {{ field }}
+            <br><br>
+        {% endfor %}
         <input type="submit" value="Submit">
     </form>
     <br>
