added list view for classes

--- a/web_app/mysite/read/templates/read/teacher/teacher_classes.html
+++ b/web_app/mysite/read/templates/read/teacher/teacher_classes.html
@@ -3,11 +3,23 @@
     <h1>Your Classes</h1>
     {% if classes %}
     <ul>
-        {% for class in classes %}
-            <li>{{ class }}</li>
-        {% endfor %}
+        <table>
+            <th>Name</th>
+            <th>Start Date</th>
+            <th>End Date</th>
+            {% for class in classes %}
+                <tr>
+                    <td>{{ class.name }}</td> <td>{{ class.start_date }}</td><td>{{ class.end_date }}</td>
+                </tr>
+            {% endfor %}
+        </table>
     </ul>
     {% else %}
         <p>You have no classes</p>
     {% endif %}
+    <form action="{% url 'teacher_classes_view' %}" method="post">
+        {% csrf_token %}
+        <input type="hidden" name="add_class" value='1'>
+        <input type="submit" value="Add class">
+    </form>
 {% endblock %}
