--- a/web_app/mysite/read/static/read/student_base.css
+++ b/web_app/mysite/read/static/read/student_base.css
@@ -30,6 +30,15 @@ body {
   font-size: 28px; /* Increased text to enable scrolling */
   padding: 0px 10px;
 }
+table{
+    border-collapse: collapse;
+    border: 1px solid black;
+}
+td, th{
+    border: 1px solid black;
+    padding: 10px 20px;
+}
+
 
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
