--- a/web_app/mysite/read/templates/read/teacher/teacher_adds_classroom.html
+++ b/web_app/mysite/read/templates/read/teacher/teacher_adds_classroom.html
@@ -3,7 +3,11 @@
 
     <form action="{% url 'teacher_adds_classroom_view' %}" method="post">
         {% csrf_token %}
-        {{ form }}
+        {% for field in form.visible_fields %}
+        <span style="color:red">{{ field.errors }}</span>
+            {{ field.label_tag }} {{ field }}
+            <br><br>
+        {% endfor %}
         <input type="submit" value="Submit">
     </form>
 {% endblock %}
