partially done student join views

--- a/web_app/mysite/read/templates/read/student/student_base.html
+++ b/web_app/mysite/read/templates/read/student/student_base.html
@@ -11,6 +11,8 @@
 <body>
     <div class="sidenav">
         <a href="{% url 'student_classes_view' %}">Classes</a>
+        <a href="{% url 'student_join_class_view' %}">Join Class</a>
+        <a href="{% url 'student_notices_view' %}">Notices</a>
         <a href="{% url 'student_profile_view' %}">Profile</a>
         <a href="{% url 'logout_view' %}">Logout</a>
     </div>
