--- a/web_app/mysite/read/templates/read/student/student_specific_class.html
+++ b/web_app/mysite/read/templates/read/student/student_specific_class.html
@@ -8,6 +8,7 @@
     </th>
     {% if docs %}
     <th>Upload Date</th>
+    <th>File Link</th>
     {% endif %}
     {% for doc in docs %}
     <tr>
@@ -21,5 +22,6 @@
     </tr>
     {% endfor %}
 </table>
+    <p style="font-size:18px;">Note: Facial recognition for viewing files may take upto ten seconds.</p>
 {% endblock %}
 
