css added to login page

--- a/web_app/mysite/read/templates/read/login.html
+++ b/web_app/mysite/read/templates/read/login.html
@@ -2,24 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>READ-Login</title>
+
+     {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'read/login.css' %}">
+
 </head>
 <body>
-    <h1>Login</h1>
+<div>
+    <h1 style="color: #006666">R E A D</h1>
+</div>
+
+<div class="wrapper">
+<div class="container">
+ <h1>Login</h1>
     {% if error_message %}
     <span style="color:red"><p>{{ error_message }}</p></span>
     {% endif %}
 
-    <form action="{% url 'login_view' %}" method="post">
+
+    <form action="{% url 'login_view' %}" method="post" class="form">
         {% csrf_token %}
         {% for field in form.visible_fields %}
         <span style="color:red">{{ field.errors }}</span>
             {{ field.label_tag }} {{ field }}
             <br><br>
         {% endfor %}
-        <input type="submit" value="Submit">
+        <input type="submit" value="Submit" class="button">
     </form>
     <br>
-    <a href="{% url 'register_view' %}">Register</a>
+
+    <h4>Don't have an account?<a href="{% url 'register_view' %}">Register</a> here! </h4>
+  </div>
+</div>
 </body>
 </html>
