tbase_view added

--- a/web_app/mysite/read/templates/read/base_profile.html
+++ b/web_app/mysite/read/templates/read/base_profile.html
@@ -32,7 +32,7 @@
    <br>
 
     <a class="button" href="{% url 'sbase_view' %}">Student</a>
-    <a class="button" href="{% url 'sbase_view' %}">Teacher</a>
+    <a class="button" href="{% url 'tbase_view' %}">Teacher</a>
 
 
 </div>
