--- a/web_app/mysite/read/static/read/css/file_view.css
+++ b/web_app/mysite/read/static/read/css/file_view.css
@@ -6,3 +6,26 @@
     height: 94%;
     overflow: auto;
 }
+
+#button_div {
+    position: absolute;
+    left: 10px;
+    top: 450px;
+    display: none;
+}
+
+#leave_page_button_div {
+    position: absolute;
+    left: 10px;
+    top: 550px;
+    display: none;
+}
+#message{
+    width: 250px;
+    max-width: 250px;
+    display: inline-block;
+
+    position: absolute;
+    left: 10px;
+    top: 250px;
+}
